--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>ORE MUSİC</h1>
+    <p class="first">
+        <a href="index.html" target="_blank"><u>Ana Sayfa</u></a>
+        <a href="products.html" target="_blank"><u>Ürünlerimiz</u></a>
+        <a href="about-us.html" target="_blank"><u>Hakkımızda</u></a>
+    </p>
+    <h2>Hakkımızda</h2>
+    <p>Oremusic, 1993 yılında İzmir'de kurulmuş, kısa sürede dünyaca ünlü markaların distribütörlüğüne ev sahipliği yapmaya başlamış  ve Türkiye'de "Müzik Enstrümanları" sektörünün lideri haline gelmiştir.<br>Portföyündeki tüm ürünlerin Türkiye Distribütörü ve İthalatçısı olan oremusic, İstanbul'da 17, Ankara'da 3, İzmir'de 5, Bodrum, Adana, Gaziantep, Antalya, Samsun ve Bursa'da olmak üzere 31 "Perakende Mağazası" ve 600'den fazla bayisi ile müşterilerine hizmet vermektedir.<br>İzmir, İstanbul, Ankara ve Ege Serbest Bölgesinde olmak üzere toplam, 6.500 m2 kapalı depo hacmi ile Türkiye'nin tüm bölgelerine distribütörlüğünü yapmakta olduğu 145'den fazla markanın ürünlerini en doğru ve en hızlı bir şekilde sizlere ulaştırmaktadır.<br>Oremusic 2020 yılında sektöründe bir ilki gerçekleştirerek, "kargo değil biz taşıyoruz" sloganı ile bünyesinde ORE XPRESS hızlı teslimat sistemini oluşturmuştur. An itibariyle Türkiye genelindeki 35 şehre kendi araçları ve sevkiyat ekibiyle teslimat yapmaktadır.<br>Oremusic Türkiye'nin tüm konservatuar, müzik fakültesi, güzel sanatlar lisesi, askeri kurumlar ve diğer bir çok değerli kurumun, yapılan ihaleler vasıtası ile tedarikçisi konumundadır.<br>Firmamız, özellikle uzun yıllar başarılı olarak sürdürdüğü "Yamaha Müzik Enstrümanları Distribütörlüğü" ve Enstrüman alanında dünyanın önde gelen bir çok önemli markasının "Tek Yetkili Distribütörü" konumunda aldığı bir çok ödül ile sektörün en önemli aktörü ve gurur kaynağı olmuştur.<br>Oremusic tüm bu çalışmalarının yanında, ülkemizde yapılan bir çok etkinliğe ve ülkemizin değerli müzisyenlerine sponsor olarak da destek olmaktadır.</p>
+    <hr>
+    <h3>Vizyonumuz</h3>
+    <p>Sektöre liderlik eden ve katma değer yaratan, çalışanlarına ve müşterilerine ilham veren ve mutluluk üreten seçkin bir şirket olmak.</p>
+    <hr>
+    <h3>Misyonumuz</h3>
+    <p>100 kişinin üzerinde bir ekip ile amacımız; "Türkiye'nin En Büyük Müzik Aletleri Mağazalar Zinciri" mottosuna layık, ülkemizin kültürel ve sanatsal kalkınmasında söz ve pay sahibi olabilmektir.
+    </p>
+    <hr>
+    <h3>Şirket Kültürümüz</h3>
+    <p>Her bir çalışanımız kendisini doremusic ailesinin seçkin bir bireyi olarak düşünmekte ve bu kültüre uygun olarak hareket etmektedir. Güvenin esas olduğu, sonuç odaklı bir yaklaşım ile ürettiğimiz marka değeri sayesinde sektördeki liderliğimizi korumaktayız.
+    <br>
+    Mutlu Çalışan > Mutlu Müşteri > doremusic</p>
 </body>
 </html>
