--- a/products.html
+++ b/products.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>ORE MUSİC</h1>
+    <p class="first">
+        <a href="index.html" target="_blank"><u>Ana Sayfa</u></a>
+        <a href="products.html" target="_blank"><u>Ürünlerimiz</u></a>
+        <a href="about-us.html" target="_blank"><u>Hakkımızda</u></a>
+    </p>
+    <h2>Ürünlerimiz</h2>
+    <ol>
+        <li><img src="./images/gitar.jpg" alt="gitar1"><br>Gibson Custom 1964 SG Standard Reissue <b>275,995 TL</b></li>
+        <li><img src="./images/gitarr.jpg" alt="gitar2"><br>Yamaha NCX1NT Elektro Klasik Gitar (Naturel) <b>22,219 TL</b></li>
+        <li><img src="./images/basgitar.jpg" alt="basgitar"><br>SX SPJ62 /FR Bas Gitar (Fiesta Red) <b>6,853 TL</b></li>
+        <li><img src="./images/cello.jpg" alt="cello"><br>Stentor II 4/4 Çello (Satin Finish) <b>23,308 TL</b></li>
+        <li><img src="./images/davul.jpg" alt="davul"><br>Yamaha Stage Custom Birch <b>49,109 TL</b></li>
+        <li><img src="./images/kemanseti.jpg" alt="kemanseti"><br>Yamaha V7SG Keman Seti (4/4) <b>37,215 TL</b></li>
+        <li><img src="./images/piyano.jpg" alt="piyano"><br>Zimmermann Grand Piano <b>959,320 TL</b></li>
+        <li><img src="./images/viyola.jpg" alt="viyola"><br>Stentor 1505/M Student II Viyola <b>14,768 TL</b></li>
+    </ol>
 </body>
 </html>
