--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Müzik Dükkanım</h1>
-    <p>
+    <h1>ORE MUSİC</h1>
+    <p class="first">
         <a href="index.html" target="_blank"><u>Ana Sayfa</u></a>
         <a href="products.html" target="_blank"><u>Ürünlerimiz</u></a>
         <a href="about-us.html" target="_blank"><u>Hakkımızda</u></a>
     </p>
     <h2>Ana Sayfa</h2>
-    <p>
-        Müzik Dükkanım sitesine hoşgeldiniz. Bu sitede çeşitli müzik aletlerini bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için <a href="products.html" target="_blank"><u>Ürünlerimiz</u></a> sayfasını ziyaret edebilirsiniz. 
+    <p class="second">
+        Ore Music sitemize hoşgeldiniz. Bu sitede çeşitli müzik aletlerini bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için <a href="products.html" target="_blank"><u>Ürünlerimiz</u></a> sayfasını ziyaret edebilirsiniz. 
     </p>
+    <h3 style="text-align: center;">Sitemizde Bulunan Müzik Aletleri</h3>
+    <ul>
+        <li>Gitar</li>
+        <li>Keman</li>
+        <li>Viyola</li>
+        <li>Çello</li>
+        <li>Piyano</li>
+        <li>Davul</li>
+    </ul>
 </body>
 </html>
